Mudando a cor de fundo

--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 body {
-	background-color: gray;
+	background-color: white;
 	font-color: green;
 	font-weight: bold;
 	font-family: Arial, Helvetica;
